Library/AXL(Library)/Visual Basic(Net)/AXD.vb


' Read data level by byte unit in Offset position of specified extended input contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : offset position by byte unit between input index.(0~1)
' *upValue    : 0x00 ~ 0x0FF
'==============================================================================================='
Public Declare Function AxdReadExtInportByte Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer


' Read data level by word unit in Offset position of specified extended input contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : offset position by word unit between input index.(0)
' *upValue    : 0x00 ~ 0x0FFFF
'==============================================================================================='
Public Declare Function AxdReadExtInportWord Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer


' Read data level by double word unit in Offset position of specified extended input contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : offset position by dword unit between input index.(0)
' *upValue    : 0x00 ~ 0x00000FFFF
'==============================================================================================='
Public Declare Function AxdReadExtInportDword Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer


' Read data level by bit unit in Offset position of specified extended output contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by bit unit between output index.(0~15)
' *upValue    : LOW(0)
'             : HIGH(1)
'==============================================================================================='
Public Declare Function AxdReadExtOutportBit Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer


' Read data level by byte unit in Offset position of specified extended output contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by byte unit between output index.(0~1)
' *upValue    : 0x00 ~ 0x0FF
'==============================================================================================='
Public Declare Function AxdReadExtOutportByte Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer


' Read data level by word unit in Offset position of specified extended output contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by word unit between output index.(0)
' *upValue    : 0x00 ~ 0x0FFFF
'==============================================================================================='
Public Declare Function AxdReadExtOutportWord Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer


' Read data level by double word unit in Offset position of specified extended output contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by dword unit between output index.(0)
' *upValue    : 0x00 ~ 0x0000FFFF
'==============================================================================================='
Public Declare Function AxdReadExtOutportDword Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer


' Output data by bit unit in Offset position of specified extended output contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by bit unit between output index.(0~15)
' uValue      : LOW(0)
'             : HIGH(1)
'==============================================================================================='
Public Declare Function AxdWriteExtOutportBit Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uValue As Integer) As Integer


' Output data by byte unit in Offset position of specified extended output contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by byte unit between output index.(0~1)
' uValue      : 0x00 ~ 0x0FF
'==============================================================================================='
Public Declare Function AxdWriteExtOutportByte Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uValue As Integer) As Integer


' Output data by word unit in Offset position of specified extended output contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by word unit between output index.(0~1)
' uValue      : 0x00 ~ 0x0FFFF
'==============================================================================================='
Public Declare Function AxdWriteExtOutportWord Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uValue As Integer) As Integer


' Output data by dword unit in Offset position of specified extended output contact module
'==============================================================================================/'
' lModuleNo   : Module number
' lOffset     : Offset position by dword unit between output index.(0)
' uValue      : 0x00 ~ 0x00000FFFF
'==============================================================================================='
Public Declare Function AxdWriteExtOutportDword Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uValue As Integer) As Integer


' Set data level by bit unit in Offset position of specified extended input/output contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by bit unit between input/output index.(0~15)
' uLevel      : LOW(0)
'             : HIGH(1)
'==============================================================================================='
Public Declare Function AxdLevelSetExtportBit Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uLevel As Integer) As Integer


' Set data level by byte unit in Offset position of specified extended input/output contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by byte unit between input/output index.(0~1)
' uLevel      : 0x00 ~ 0xFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
'==============================================================================================='
Public Declare Function AxdLevelSetExtportByte Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uLevel As Integer) As Integer


' Set data level by word unit in Offset position of specified extended input/output contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by word unit between input/output index.(0)
' uLevel      : 0x00 ~ 0xFFFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
'==============================================================================================='
Public Declare Function AxdLevelSetExtportWord Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uLevel As Integer) As Integer


' Set data level by dword unit in Offset position of specified extended input/output contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by dword unit between input/output index.(0)
' uLevel      : 0x00 ~ 0x0000FFFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
'==============================================================================================='
Public Declare Function AxdLevelSetExtportDword Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uLevel As Integer) As Integer


' Verify data level by bit unit in Offset position of specified extended input/output contact module
'===============================================================================================//'
' lModuleNo   : Module number
' lOffset     : Offset position by bit unit between input/output index.(0~15)
' uLevel      : LOW(0)
'             : HIGH(1)
'===============================================================================================//'
Public Declare Function AxdLevelGetExtportBit Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal upLevel As Integer) As Integer


' Verify data level by byte unit in Offset position of specified extended input/output contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by byte unit between input/output index.(0~1)
' uLevel      : 0x00 ~ 0xFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
'==============================================================================================='
Public Declare Function AxdLevelGetExtportByte Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal upLevel As Integer) As Integer


' Verify data level by word unit in Offset position of specified extended input/output contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by word unit between input/output index.(0)
' uLevel      : 0x00 ~ 0xFFFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
'==============================================================================================='
Public Declare Function AxdLevelGetExtportWord Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal upLevel As Integer) As Integer


' Verify data level by dword unit in Offset position of specified extended input/output contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by dword unit between input/output index.(0)
' uLevel      : 0x00 ~ 0x0000FFFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
'==============================================================================================='
Public Declare Function AxdLevelGetExtportDword Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal upLevel As Integer) As Integer

